--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>Add new user</h1>
+<!--{{#message}}
+{{message}}
+{{/message}}-->
 <form th:action="@{/registration.html}" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
