--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<form th:action="@{/registration.html}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
+<form th:action="@{/registration}" method="post">
+    <div><label> User Name : <input type="text" name="login"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
