--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,6 @@
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
-<a th:href="@{/registration.html}"> Add new user</a>
+<a th:href="@{/registration}"> Add new user</a>
 </body>
 </html>
