--- a/src/main/resources/templates/UserPage.mustache
+++ b/src/main/resources/templates/UserPage.mustache
@@ -1,22 +1,24 @@
-<!--
-<!DOCTYPE html>
 <html>
 
 <body>
 <div>
+    <form action="/logout" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
+<div>
     <form method="post">
         <input type="text" name="text" placeholder="Введите сообщение"/>
         <button type="submit">Добавить</button>
-
-
     </form>
 </div>
-<div>Список ообщений</div>
+<div>Список сообщений</div>
+
 {{#messages}}
     <div>
+        <b>{{id}}</b>
         <span>{{text}}</span>
     </div>
 {{/messages}}
-
 </body>
-</html>-->
+</html>
