--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns: sec= "http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>registration</title>
+    <title>Spring Security Example </title>
 </head>
 <body>
+Add new user
 
-<form th:action="@{/registration}" method="post">
+<form action="/registration" method="post">
     <div><label> User Name : <input type="text" name="login"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
