--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -7,5 +7,6 @@
 <body>
 <div>Hello, user</div>
 <a href="/UsersListPage">Main page</a>
+<a href="/CreateChat">Create Group Chat</a>
 </body>
 </html>
