--- a/src/main/resources/templates/GroupChat.mustache
+++ b/src/main/resources/templates/GroupChat.mustache
@@ -1,5 +1,13 @@
 <div>
-    <form action="/GroupChat/{IdChat}" method="post">
+    <form action="/logout" method="post">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
+<a href="/CreateChat">Назад к списку групповых чатов</a>
+<a href="/">Вернуться на главную</a>
+<div>
+    <form action="/GroupChat/{{IdChat}}" method="post">
         <input type="text" name="text" placeholder="Введите сообщение" />
         <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
         <button type="submit">Отправить</button>
