--- a/src/main/resources/templates/PersonalChat.mustache
+++ b/src/main/resources/templates/PersonalChat.mustache
@@ -3,15 +3,16 @@
 <body>
 <div>
     <form action="/logout" method="post">
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <input type="submit" value="Sign Out"/>
     </form>
-    <a href="/UsersListPage"> Посмотреть список пользователей</a>
+    <a href="/UsersListPage">Посмотреть список пользователей</a>
+    <a href="/"> Вернуться на главную</a>
 </div>
 <div>
     <form action="/PersonalChat/{{addressee}}" method="post">
-        <input type="text" name="text" placeholder="Введите сообщение" />
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+        <input type="text" name="text" placeholder="Введите сообщение"/>
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <button type="submit">Отправить</button>
     </form>
 </div>
