--- a/src/main/resources/templates/UsersListPage.mustache
+++ b/src/main/resources/templates/UsersListPage.mustache
@@ -7,18 +7,17 @@
     </form>
 </div>
 <div>
-
+    <a href="/"> Вернуться на главную</a>
 </div>
 <div>Список пользователей</div>
 <form method="post" action="filter">
     <input type="text" name="filter" placeholder="Введите логин">
-    <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+    <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
     <button type="submit">Найти</button>
 </form>
 {{#users}}
     <div>
-
-        <a href="/Chat/{{login}}"><strong>{{login}}</strong></a>
+        <a href="/PersonalChat/{{login}}"><strong>{{login}}</strong></a>
     </div>
 {{/users}}
 </body>
