--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -4,11 +4,9 @@
     <title>Spring Security Example </title>
 </head>
 <body>
-Add new user
-
 <form action="/registration" method="post">
-    <div><label> User Name : <input type="text" name="login"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><label> Логин : <input type="text" name="login"/> </label></div>
+    <div><label> Пароль: <input type="password" name="password"/> </label></div>
     <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
     <div><input type="submit" value="Sign In"/></div>
 </form>
